--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,10 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 /*       Variables CSS  */
-
 :root {
     --header-height: 3rem;
-
     /* Colors */
     --hue-color: 206;
     --black-color: hsl(var(--hue-color), 4%, 4%);
@@ -120,9 +118,9 @@
 
     .section_title-gradient {
         background: var(--text-gradient);
-        color: transparent;
         -webkit-background-clip: text;
         background-clip: text;
+        color: transparent;
     }
 
     /* LAYOUT */
@@ -262,7 +260,7 @@
         left: 1rem;
         line-height: 6rem;
     }
-    .home-subtitle {
+    .home_subtitle {
         font-size: var(--big-font-size);
         margin-bottom: var(--mb-2-5);
     }
@@ -563,14 +561,216 @@
     }
 
     /*  SCROLL BAR  */
+    ::-webkit-scrollbar {
+        width: 1rem;
+        border-radius: .5rem;
+      }
+      
+    ::-webkit-scrollbar-thumb {
+        background-color: var(--scroll-thumb-color, hsl(var(--hue-color), 4%, 16%));
+        border-radius: .5rem;
+    }
     
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--scroll-thumb-color-alt);
+    }
+      
     /*  ====== MEDIA QUERIES ====== */
     /*  For small devices  */
+    @media screen and (max-width: 340px) {
+        .container {
+            margin-left: var(--mb-1);
+            margin-right: var(--mb-1);
+        }
+        .section_title {
+            font-size: var(--big-font-size);
+        }
 
+        .home_img {
+            width: 200px;
+            top: -13rem;
+        }
+        .home_title {
+            top: -4rem;
+            font-size: var(--bigger-font-size);
+        }
+        .home_data {
+            padding-top: 1rem;
+        }
+        .home_description {
+            font-size: var(--small-font-size);
+        }
+        .specs_img {
+            width: 200px;
+        }
+        .case_container {
+            grid-template-columns: .6fr 1fr;
+        }
+        .case_img {
+            width: 220px;
+            top: -2rem;
+            left: -9rem;
+        }
+        .products_container {
+            grid-template-columns: 142px;
+            justify-content: center;
+        }
+    }
 
     /*  For medium devices  */
+    @media screen and (min-width: 576px) {
+        .home_container {
+            grid-template-columns: .8fr 1fr;
+        }
+        .home_data {
+            padding-top: 2rem;
+        }
+        .home_img {
+            top: -7rem;
+            left: 0;
+        }
+        .specs_img {
+            position: initial;
+        }
+        .specs_container {
+            grid-template-column: repeat(2, 1fr);
+            justify-items: center;
+            align-items: center;
+        }
+        .case_img {
+            position: initial;
+        }
+        .case_data {
+            padding: 0;
+        }
+        .case_container {
+            grid-template-columns: max-content 250px;
+            justify-content: center;
+            align-items: center;
+            column-gap: 2rem;
+        }
+        .discount_img {
+            position: initial;
+        }
+        .discount_container {
+            grid-template-columns: repeat(2, 1fr);
+            justify-items: center;
+            align-items: center;
+        }
+        .products_container {
+            grid-template-columns: (3, 142px);
+            justify-content: center;
+        }
+    }
+
+
+    @media screen and (min-width: 767px) {
+        body {
+            margin: 0;
+        }
+        .section {
+            padding: 6rem 0 2rem;
+        }
+        .nav {
+            height: calc(var(--header-height) + 1.5rem);
+        }
+        .nav_logo {
+            width: 2rem;
+        }
+        .nav_list {
+            flex-direction: row;
+            column-gap: 3.5rem;
+        }
+        .nav_link {
+            font-size: var(--normal-font-size);
+            text-transform: initial;
+        }
+        .nav_toggle,
+        .nav_close {
+            display: none;
+        }
+        .home_container {
+            position: relative;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .home_img {
+            top: -9rem;
+            left: 4rem;
+        }
+        .home_data {
+            padding-top: 8rem;
+        }
+        .specs_img {
+            width: 300px;
+        }
+        .case_container {
+            column-gap: 5rem;
+        }
+        .case_img {
+            width: 300px;
+        }
+        .case_description {
+            margin-bottom: var(--mb-2);
+        }
+        .discount_container {
+            grid-template-columns: 250px max-content;
+            justify-content: center;
+            column-gap: 5rem;
+            padding: 3rem 0;
+        }
+        .discount_title {
+            font-size: var(--h2-font-size);
+            margin-bottom: var(--mb-1);
+        }
+        .discount_description {
+            margi-bottom: var(--mb-2);
+        }
+        .products_container {
+            grid-template-columns: repeat(3, 162px);
+            gap: 6rem 3rem;
+            padding-top: 5rem;
+        }
+        .products_card {
+            height: 152px;
+            padding: .85rem;
+        }
+        .products_img {
+            width: 95px;
+        }
+        .footer_container {
+            grid-template-columns: .4fr .7fr .7fr 1fr;
+        }
+    }
 
 
     /*  For large devices  */
 
-
+    @media screen and (min-width: 1024px) {
+        .container {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .home_img {
+            width: 300px;
+            top: -15rem;
+        }
+        .home_title {
+            top: -5rem;
+            left: 3.5rem;
+        }
+        .home_description {
+            padding-right: 5rem;
+        }
+        .sponsor_img {
+            width: 100px;
+        }
+        .discount_img {
+            width: 350px;
+        }
+        .footer_container {
+            padding-top: 3rem;
+        }
+        .footer_copy {
+            margin-top: 9rem;
+        }
+    }
